--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,17 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Authentification</a></li>
+        <li class="active"><a href="#">Appareils</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h2>mes appareils</h2>
-      <p>Mis à jour : {{ lastUpdate | async | date: 'yMMMMEEEEd' | uppercase }}</p>
-      <ul class="list-group">
-        <app-appareil *ngFor="let appareil of appareils; let i = index" 
-          [appareilName]="appareil.name" 
-          [appareilStatus]="appareil.status"
-          [index]="i">
-        </app-appareil>
-      </ul>
-      <button class="btn btn-success" 
-              [disabled]="!isAuth"
-              (click)="onAllumer()">Tout allumer</button>
-      <button class="btn btn-danger" 
-              [disabled]="!isAuth"
-              (click)="onEteindre()">Tout éteindre</button>
+      <app-appareil-view></app-appareil-view>
     </div>
   </div>
 </div>
-<router-outlet></router-outlet>
