--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <div class="container-fluid">
     <div class="navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#">Authentification</a></li>
-        <li class="active"><a href="#">Appareils</a></li>
+        <li routerLinkActive="active"><a routerLink="/auth">Authentification</a></li>
+        <li routerLinkActive="active"><a routerLink="/appareils">Appareils</a></li>
       </ul>
     </div>
   </div>
@@ -11,7 +11,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <app-appareil-view></app-appareil-view>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
