--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -4,12 +4,11 @@
   <app-appareil *ngFor="let appareil of appareils; let i = index" 
     [appareilName]="appareil.name" 
     [appareilStatus]="appareil.status"
-    [index]="i">
+    [index]="i"
+    [id]="appareil.id">
   </app-appareil>
 </ul>
 <button class="btn btn-success" 
-        [disabled]="!isAuth"
-        (click)="onAllumer()">Tout allumer</button>
+         (click)="onAllumer()">Tout allumer</button>
 <button class="btn btn-danger" 
-        [disabled]="!isAuth"
-        (click)="onEteindre()">Tout éteindre</button>
+         (click)="onEteindre()">Tout éteindre</button>
