--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -1,14 +1,18 @@
 <h2>Mes appareils</h2>
 <p>Mis à jour : {{ lastUpdate | async | date: 'y MMMM EEEE d' | uppercase }}</p>
 <ul class="list-group">
-  <app-appareil *ngFor="let appareil of appareils; let i = index" 
-    [appareilName]="appareil.name" 
+  <app-appareil *ngFor="let appareil of appareils; let i = index"
+    [appareilName]="appareil.name"
     [appareilStatus]="appareil.status"
     [index]="i"
     [id]="appareil.id">
   </app-appareil>
 </ul>
-<button class="btn btn-success" 
+<button class="btn btn-success"
          (click)="onAllumer()">Tout allumer</button>
-<button class="btn btn-danger" 
+<button class="btn btn-danger"
          (click)="onEteindre()">Tout éteindre</button>
+<button class="btn btn-primary"
+         (click)="onSave()">Enregistrer</button>
+<button class="btn btn-primary"
+         (click)="onFetch()">Charger</button>
